# qrt_durhack_neat

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  frame.csv  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_ugh.txt
.github/workflows/: ci.yml
docs/: conf.py  index.rst
rough/: async_file.py  ideas.txt  log_ugh.py  multi_track.py  read_csv.py  string_io.py  watch_dog.py  watch_files.py
rough/log_dir/: a.txt
src/: cli_log  log_analyser_cli.py  main.py  server.py
src/datamodel/: log_dir_event.py  log_file.py
src/filter/: composite_filter.py  regex_field_filter.py
src/loader/: entry.py  format_helpers.py  loader.py  log_dir_watcher.py  log_event_bus.py  log_iterator.py  log_manager.py  log_parser.py  parser.py  real_time.py
src/loglib/: __init__.py  cli_parser.py  command.py  entry_helpers.py  entry_parse.py  file_reader.py  json_serialise.py  log_dir_watcher.py  rmq.py  typing.py
src/loglib/cli/: cli_parser.py
src/loglib/datamodel/: __init__.py  log_dir_event.py  log_event.py  log_file.py
src/loglib/loader/: __init__.py  entry_parse.py  log_dir_watcher.py  log_entry_stream.py  log_event_bus.py  log_file_watcher.py  log_manager.py  log_parser.py  static_loader.py
src/loglib/net/: web_socket_client.py  web_socket_server.py
src/serverlib/: file_manager.py  lifetime.py  model.py  rmq.py
test/: test_loader.py  test_log_file.py  test_log_iterator.py  test_parser.py
tests/unit/: test_log_file.py  test_parser.py  test_serialise.py
