[project]
name = "test-pypi-upload-with-wheel"
description = "See If Possible To Build Wheel"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Foo Bar", email = "foo.bar@gmail.com" },
]
keywords = ["Test"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.0.1"

[tool.poetry]
name = "qrt-durhack-neat"
version = "0.1.0"
description = ""
authors = ["Jack Wright <ugh@ugh.com>"]
readme = "README.md"
packages = [{include = "loglib", from = "src"}]

# pin the dependencies to avoid nightmares with later versions
[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.2.1"
watchfiles = "0.21.0"
pandas = "2.1.2"
aio-pika = "9.3.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.ruff]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.coverage.run]
branch = true
omit = [
  "*/__init__.py",
  "src/main.py"
]